--- a/src/main/resources/static/css/member/myInfoFrm.css
+++ b/src/main/resources/static/css/member/myInfoFrm.css
@@ -1,15 +1,15 @@
 @charset "UTF-8";
 
-.main-join {
+.main-myInfo {
   margin: 0 auto;
-  width: 650px;
+  width: 620px;
 }
 
 .seperate-this{
-  width: 650px;
+  width: 620px;
 }
 
-.join-form{
+.myInfo-form{
   width: 620px;
   margin: 0 auto;
 }
@@ -18,4 +18,9 @@
   margin: 0 auto;
   padding-top: 45px;
   text-align: center;
+}
+
+.checkPassword{
+  width: 620px;
+  margin: 0 auto;
 }
