--- a/src/main/resources/static/css/default-psw.css
+++ b/src/main/resources/static/css/default-psw.css
@@ -27,8 +27,8 @@
 
 :root {
   /* main color */
-  --main_blue-light: #00B7F1;
-  --main_blue-bold: #0267f3;
+  --main_blue_light: #00B7F1;
+  --main_blue_bold: #0267f3;
   --main_red: #E9511C;
   --main_black: #111111;
   --main_gray_bold: #6B6B6B;
@@ -95,12 +95,22 @@
 .seperate-around{
   justify-content: space-between;
 }
+.seperate > span{
+  font-size: 12px;
+}
 
-/* input-wrap */
+/* 텍스트 컬러 */
+.text-color-red{
+  color: var(--main_red);
+}
+
+/* input */
+
+/* 1. inputWrap-default */
 .inputWrap-default{
   /*div태그*/
   /*width: 610px;*/
-  margin: 10px auto;
+  margin: 20px auto;
   display: flex;
   align-items: center;
 }
@@ -110,8 +120,9 @@
   width: 140px;
   margin-right: 10px;
 }
-.inputWrap-default > label > .inputTitleDiv > span:last-child{
+.inputWrap-default > label > .inputTitleDiv > span:nth-of-type(2){
   color: var(--main_red);
+  font-size: 14px;
 }
 .inputWrap-default > label > .inputDiv{
   /*div태그*/
@@ -138,6 +149,112 @@
   width: 40px;
 }
 
+/* 2. inputWrap-address */
+.inputWrap-address{
+  /*div태그*/
+  /*width: 610px;*/
+  margin: 20px auto;
+  display: flex;
+  align-items: flex-start;
+}
+.inputWrap-address > .inputTitleDiv{
+  /*span태그*/
+  font-size: 16px;
+  width: 140px;
+  margin-right: 10px;
+}
+.inputWrap-address > .inputTitleDiv > span:nth-of-type(2){
+  color: var(--main_red);
+  font-size: 14px;
+}
+.inputWrap-address > .inputDivWrap{
+  width: 340px;
+  height: 100px;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.inputWrap-address > .inputDivWrap > .inputDiv{
+  /*div태그*/
+  width: 340px;
+  height: 40px;
+  padding: 10px 15px;
+  border: 1px solid var(--main_gray_light);
+  border-radius: 4px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+.inputWrap-address > .inputDivWrap > .inputDiv > input{
+  /*input태그 자체*/
+  font-size: 14px;
+  width: 260px;
+  height: 100%;
+  border: none;
+}
+.inputWrap-address > .inputDivWrap > .inputDiv > span{
+  /*span태그 자체*/
+  width: 40px;
+}
+
+/* 3. inputWrap-birthdate */
+.inputWrap-birthdate{
+  /*div태그*/
+  /*width: 610px;*/
+  margin: 20px auto;
+  display: flex;
+  align-items: center;
+}
+.inputWrap-birthdate > label > .inputTitleDiv{
+  /*span태그*/
+  font-size: 16px;
+  width: 140px;
+  margin-right: 10px;
+}
+.inputWrap-birthdate > label > .inputTitleDiv > span:nth-of-type(2){
+  color: var(--main_red);
+  font-size: 14px;
+}
+.inputWrap-birthdate > label > .inputDiv-b,.inputDiv-g{
+  /*div태그*/
+  width: 150px;
+  height: 40px;
+  padding: 10px 15px;
+  border: 1px solid var(--main_gray_light);
+  border-radius: 4px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  /*justify-content: space-between;*/
+}
+.inputWrap-birthdate > .dashDiv{
+  width: 20px;
+  margin-right: 10px;
+  text-align: center;
+}
+.inputWrap-birthdate > label > .inputDiv-b > input{
+  /*input태그 자체*/
+  font-size: 14px;
+  width: 118px;
+  height: 100%;
+  border: none;
+}
+.inputWrap-birthdate > label > .inputDiv-g > input{
+  /*input태그 자체*/
+  font-size: 14px;
+  width: 30px;
+  height: 100%;
+  border: none;
+}
+.inputWrap-birthdate > label > .inputDiv-g > span{
+  /*span태그 자체*/
+  font-size: 14px;
+  height: 100%;
+  border: none;
+}
 
 
 
@@ -149,15 +266,34 @@
   padding: 10px;
   font-size: 14px;
   text-align: center;
+  border: none;
   cursor: pointer;
 }
-.btn-bg-blue{
-  background-color: var(--main_blue-light);
-  border-radius: 4px;
+.btn-bg-blue_light{
+  background-color: var(--main_blue_light);
   color: #fff;
 }
-.btn-bg-blue-deactivated{
+.btn-bg-blue_light-deactivated{
   background-color: var(--main_gray_light);
-  border-radius: 4px;
   color: var(--main_black);
+}
+
+.btn-bg-blue_bold{
+  background-color: var(--main_blue_bold);
+  color: #fff;
+}
+.btn-bg-blue_bold_deactivated{
+  background-color: var(--main_gray_bold);
+  color: #000;
+}
+
+.btn-big{
+  width: 240px;
+  height: 50px;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  text-align: center;
+  border: none;
+  cursor: pointer;
 }
