--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,34 @@
 </head>
 <body>
 
+  <th:block th:if="${session.member == null}">
+    <ul>
+      <li><a href="/member/signInFrm">로그인</a></li>
+      <li><a href="/member/signUpFrm">회원가입</a></li>
+    </ul>
+  </th:block>
+
+  <th:block th:if="${session.member != null}">
+    <ul>
+      <li><a href="/member/mypage/myInfoFrm">마이페이지</a></li>
+      <li><a href="/member/signOut">로그아웃</a></li>
+
+      <!--
+        아래 5가지 경우는 jsp로 어떻게 하나요?
+        thymeleaf의 경우는
+        1. 특정 url로 이동
+          <a th:href="@{https://naver.com}">네이버로 이동</a>
+        2. 현재 서버 내에서 이동
+          <a th:href="@{/member/signInFrm}">로그인 페이지로 이동</a>
+        3. 파라미터를 넘길 시
+          <a th:href="@{/member/mypage(memberNo = ${session.member.memberNo})}">파라미터 1개</a>
+        4. 파라미터를 여러 개 넘길 시
+          <a th:href="@{/member/mypage(memberId = ${어쩌구저쩌구.memberId}, memberPw = ${어쩌구저쩌구.memberPw})}">파라미터 여러개</a>
+        5. PathVariable 사용 시
+          <a th:href="@{/member/mypage/{memberId}(memberId = ${어쩌구저쩌구.memberId})}">패스배리어블</a>
+      -->
+    </ul>
+  </th:block>
+
 </body>
 </html>
