인덱스에 게시판 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="/member/signInFrm">로그인</a></li>
       <li><a href="/member/signUpFrm">회원가입</a></li>
+      <li><a href="/board/boardList?reqPage=1">게시판</a></li>
     </ul>
   </th:block>
 
@@ -17,6 +18,7 @@
     <ul>
       <li><a href="/member/mypage/myInfoFrm">마이페이지</a></li>
       <li><a href="/member/signOut">로그아웃</a></li>
+      <li><a href="/board/boardList?reqPage=1">게시판</a></li>
 
       <!--
         아래 5가지 경우는 jsp로 어떻게 하나요?
