--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -33,8 +33,7 @@
 				<td colspan="5" th:text="${board.boardContent}"></td>
 			</tr>
 			
-			<!-- <tr th:if="${session.member.memberId == board.boardWriter}"> -->
-			<tr>
+			<tr th:if="${session.member != null && session.member.memberId == board.boardWriter}">
 				<td colspan="6">
 					<a th:href="@{/board/updateFrm(boardNo=${board.boardNo})}">수정</a>
 					<a th:href="@{/board/delete(boardNo=${board.boardNo})}">삭제</a>
